--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Auto detect text files and perform LF normalization
+* text=auto
 # Compiled class file
 *.class
 
@@ -21,4 +23,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+node_modules/
+coverage/
+user.js
+NetologyTest.js
